[project]
name = "mini-inference-engine"
version = "0.1.0"
description = "A from-scratch LLM inference engine with paged KV cache, continuous batching, and speculative decoding"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
